--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Timeo Boulhol",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "socket.io": "^2.2.0"
   }
 }
